fixed dropdown animation when navbar is collapsed

--- a/Personal Website/styles.css
+++ b/Personal Website/styles.css
@@ -20,7 +20,7 @@
 
 .dropdown-menu {
     position: absolute;
-    background: #61DCDF;
+    background: #fff;
     left: 50%;
     right: auto;
 }
